--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,42 @@
-# Database Configuration
-DB_HOST=localhost
-DB_PORT=5432
-DB_USER=postgres
-DB_PASSWORD=postgres
-DB_NAME=goproject
-DB_SSLMODE=disable
+# ===========================================
+# Application Configuration (Environment Variables)
+# Copy to .env and customize
+# ===========================================
 
 # Server Configuration
 SERVER_PORT=8080
+SERVER_MODE=release  # debug or release
+SERVER_READTIMEOUT=10s
+SERVER_WRITETIMEOUT=10s
+SERVER_IDLETIMEOUT=60s
+
+# Database Configuration
+DATABASE_DRIVER=sqlite  # sqlite or postgres
+DATABASE_HOST=localhost
+DATABASE_PORT=5432
+DATABASE_USER=postgres
+DATABASE_PASSWORD=your_password_here
+DATABASE_DBNAME=goproject.db
+DATABASE_SSLMODE=disable
+DATABASE_MAXIDLECONNS=10
+DATABASE_MAXOPENCONNS=100
+DATABASE_CONNMAXLIFETIME=1h
+
+# Logger Configuration
+LOGGER_LEVEL=info       # debug, info, warn, error
+LOGGER_FORMAT=json      # json or console
+LOGGER_OUTPUTPATH=stdout
+
+# Application Configuration
+APP_NAME=Golang-Rest-Api-Gin
+APP_VERSION=1.0.0
+APP_ENVIRONMENT=production  # development, staging, production
+
+# Security (Optional - for JWT Auth)
+# JWT_SECRET=your-secret-key-here
+# JWT_EXPIRATION=24h
+# JWT_REFRESH_EXPIRATION=168h
+
+# Rate Limiting (Optional)
+# RATE_LIMIT_REQUESTS=100
+# RATE_LIMIT_WINDOW=1m
