Implement logger package, add role management to users, and enhance RBAC testing scripts
- Created a logger package with initialization and logging functions.
- Added role column to users table with migration scripts for adding and removing roles.
- Developed a promote_user script to update user roles via command line.
- Implemented comprehensive testing scripts for JWT authentication and role-based access control (RBAC).
- Added manual and simple RBAC testing scripts to validate user permissions and role changes.

--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -5,6 +5,8 @@ app:
   name: "Go-Lang-project-01"
   version: "1.0.0"
   environment: "development" # development, staging, production
+  ratelimitperminute: 1000 # Requests per minute per IP (increased for testing)
+  ratelimitburst: 100 # Allow burst of 100 requests (increased for testing)
 
 server:
   port: "8080"
@@ -29,3 +31,8 @@ logger:
   level: "info" # debug, info, warn, error
   format: "json" # json or console
   outputpath: "stdout"
+
+jwt:
+  secretkey: "change-this-secret-key-in-production"
+  accesstokenduration: "24h"
+  refreshtokenduration: "168h" # 7 days
