--- a/.env.example
+++ b/.env.example
@@ -31,12 +31,10 @@ LOGGER_OUTPUTPATH=stdout
 APP_NAME=Golang-Rest-Api-Gin
 APP_VERSION=1.0.0
 APP_ENVIRONMENT=production  # development, staging, production
+APP_RATELIMITPERMINUTE=100  # Requests per minute per IP
+APP_RATELIMITBURST=10       # Allow burst of requests
 
-# Security (Optional - for JWT Auth)
-# JWT_SECRET=your-secret-key-here
-# JWT_EXPIRATION=24h
-# JWT_REFRESH_EXPIRATION=168h
-
-# Rate Limiting (Optional)
-# RATE_LIMIT_REQUESTS=100
-# RATE_LIMIT_WINDOW=1m
+# JWT Authentication
+JWT_SECRETKEY=your-super-secret-jwt-key-change-this-in-production
+JWT_ACCESSTOKENDURATION=24h     # Access token expiration
+JWT_REFRESHTOKENDURATION=168h   # Refresh token expiration (7 days)
